--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,60 +1,48 @@
-/* Estilo global */
-* {
+html, body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* Asegura que padding y borde no afecten el tamaño total */
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    font-family: Arial, sans-serif;
+    color: white;
+    background-color: #212529;
 }
 
-/* Estilos generales */
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
     background-image: url('/img/pexels-felixmittermeier-1146134.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    color: white;
-    overflow-x: hidden; /* Para evitar el scroll horizontal */
-    background-color: #212529;
+    height: 100vh; /* Hace que el body ocupe todo el alto de la ventana */
 }
 
-/* Estilos para el header */
-/* Estilos para el header */
+/* Aseguramos que el header no tenga espacio superior */
 header {
     text-align: center;
     padding: 0;
+    margin: 0; /* Asegura que no haya márgenes en el header */
     height: 600px; /* Altura para pantallas grandes */
     background-image: url('/img/Xavierfondo.png');
     background-size: cover;
-    background-position: center;
+    background-position: top center; /* Mueve la imagen hacia la parte superior */
     background-attachment: fixed;
     color: white;
     position: relative;
     z-index: 1;
 }
 
-/* Gradiente en el header */
-header::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
-    z-index: 2;
-}
+
 
 /* Estilos para la navegación */
 nav ul {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0; /* Elimina márgenes de la navegación */
     display: flex;
     justify-content: center;
     flex-wrap: wrap; /* Permite que los elementos se ajusten si no caben en una línea */
-    margin-top: 20px; /* Separar la navegación del header */
+    margin-top: 0; /* Elimina espacio extra entre la navegación y el header */
 }
 
 nav ul li {
@@ -109,7 +97,6 @@ nav ul li a:hover {
         font-size: 1.3rem; /* Aumentar el tamaño de la fuente */
     }
 }
-
 
 /* Estilos para el main */
 main {
